scode/BlackPearl/prob12/error.txt
  File "main.py", line 63
    x, y = [int(x) for x in input().split()];
         ^
SyntaxError: invalid syntax
